<resources>
    <string name="app_name">ChatWithOne</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_mobile_number_hint">enter mobile number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>