<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="4"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circlebackground"
            android:backgroundTint="@color/my_btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circlebackground"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circlebackground"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/send"
           />
    </LinearLayout>
        <TextView
           android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile_number"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/baloo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/login_country_code_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"/>

        <EditText
            android:id="@+id/login_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number_hint"
            android:inputType="phone"
            android:background="@drawable/editbutton"
            android:padding="10dp"
            android:elevation="5dp"
            android:layout_margin="10dp"/>
    </LinearLayout>

<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_weight="1">
    <Button
        android:id="@+id/login_send_Otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/baloo"
        android:textSize="20sp"
        android:background="@drawable/otp_button"
        android:layout_margin="10dp"/>
    <ProgressBar
       android:id="@+id/login_progressbar"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/my_primary"/>
</LinearLayout>


</LinearLayout>